[tool.poetry]
name = "cota-tvier-adapter"
version = "0.1.0"
description = ""
authors = ["Benjamin Brewer <ben@benbrewer.me>"]

[tool.poetry.dependencies]
python = "^3.8"
xmljson = "^0.2.1"
fastapi = "^0.61.0"
requests = "^2.24.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.4.2"
pytest-mockito = "^0.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
